# sp1-1

./: Cargo.toml
.github/workflows/: pr.yml  release.yml
crates/cli/src/commands/: build_toolchain.rs  install_toolchain.rs
crates/core/executor/: Cargo.toml
crates/core/executor/src/: air.rs  context.rs  cost.rs  errors.rs  estimating.rs  executor.rs  lib.rs  memory.rs  minimal.rs  opts.rs  profiler.rs  program.rs  record.rs  splicing.rs  syscall_code.rs  tracing.rs  utils.rs  vm.rs
crates/core/executor/src/artifacts/: rv64im_costs.json
crates/core/executor/src/disassembler/: elf.rs
crates/core/executor/src/events/precompiles/: mod.rs
crates/core/executor/src/minimal/: debug.rs  ecall.rs  hint.rs  postprocess.rs  tests.rs
crates/core/executor/src/minimal/arch/: mod.rs
crates/core/executor/src/minimal/precompiles/: ec.rs  keccak.rs  mod.rs  mprotect.rs  sig_return.rs  uint256.rs  uint256_ops.rs  uint256x2048.rs
crates/core/executor/src/syscalls/: code.rs  context.rs  mod.rs  mprotect.rs
crates/core/executor/src/vm/: gas.rs  results.rs  shapes.rs  syscall.rs
crates/core/executor/src/vm/syscall/: hint.rs  mprotect.rs  poseidon2.rs  sig_return.rs  u256x2048_mul.rs  uint256.rs  uint256_ops.rs
crates/core/jit/: Cargo.toml
crates/core/jit/src/: context.rs  lib.rs  risc.rs
crates/core/jit/src/backends/: debug.rs
crates/core/machine/src/: executor.rs  lib.rs
crates/core/machine/src/control_flow/: auipc.rs
crates/core/machine/src/memory/: page_prot.rs  page_prot_global.rs  page_prot_local.rs
crates/core/machine/src/operations/: global_interaction.rs  page.rs  trap.rs
crates/core/machine/src/program/: instruction_decode.rs  instruction_fetch.rs  trusted.rs
crates/core/machine/src/range/: trace.rs
crates/core/machine/src/riscv/: mod.rs
crates/core/machine/src/shape/: mod.rs
crates/core/machine/src/syscall/: chip.rs
crates/core/machine/src/utils/: prove.rs  test.rs
crates/core/machine/src/utype/: mod.rs
crates/core/runner/binary/src/: lib.rs  main.rs
crates/core/runner/src/: native.rs
crates/cuda/: Cargo.toml
crates/cuda/src/: pk.rs
crates/hypercube/: Cargo.toml
crates/hypercube/src/air/: builder.rs  public_values.rs
crates/hypercube/src/logup_gkr/: proof.rs  verifier.rs
crates/hypercube/src/lookup/: interaction.rs
crates/hypercube/src/prover/: shard.rs
crates/hypercube/src/verifier/: config.rs  hashable_key.rs  proof.rs  shard.rs
crates/network/: Cargo.toml
crates/network/src/: builder.rs  client.rs  lib.rs  prove.rs  prover.rs  validation.rs
crates/network/src/tee/: api.rs  client.rs  mod.rs
crates/perf/: Cargo.toml
crates/perf/src/: executor.rs  main.rs  perf.rs  setup.rs
crates/primitives/src/: consts.rs
crates/prover/: CIRCUIT_ARTIFACTS.md  Cargo.toml  Makefile  compress_shape.json  release.sh
crates/prover/assets/: SP1VerifierGroth16.txt
crates/prover/scripts/: test_shape_fixing.rs
crates/prover/src/: build.rs  shapes.rs  utils.rs  verify.rs
crates/prover/src/worker/: builder.rs
crates/prover/src/worker/controller/: core.rs  global.rs  mod.rs  precompiles.rs  splicing.rs
crates/prover/src/worker/node/: light.rs
crates/prover/src/worker/prover/: core.rs  execute.rs  recursion.rs
crates/recursion/circuit/src/: logup_gkr.rs  shard.rs  stark.rs  witness.rs
crates/recursion/circuit/src/basefold/: mod.rs
crates/recursion/circuit/src/dummy/: logup_gkr.rs  shard_proof.rs
crates/recursion/circuit/src/machine/: compress.rs  core.rs  deferred.rs  wrap.rs
crates/recursion/compiler/src/circuit/: compiler.rs
crates/recursion/executor/src/: program.rs
crates/recursion/gnark-ffi/go/sp1/: build.go
crates/recursion/gnark-ffi/src/ffi/: docker.rs
crates/sdk/: Cargo.toml
crates/sdk-types/: Cargo.toml
crates/sdk-types/src/: execute.rs  lib.rs  proof.rs  prove.rs  verify.rs
crates/sdk/src/: client.rs  lib.rs  proof.rs  prover.rs
crates/sdk/src/blocking/prover/: mod.rs
crates/sdk/src/cuda/: mod.rs
crates/sdk/src/env/: mod.rs
crates/sdk/src/network/: grpc.rs  prover.rs
crates/sdk/src/prover/: execute.rs  prove.rs
crates/stark/src/: permutation.rs  prover.rs  septic_curve.rs  septic_extension.rs  verifier.rs
crates/stark/src/air/: extension.rs
crates/test-artifacts/programs/: Cargo.toml
crates/test-artifacts/programs/trap-exec/: Cargo.toml
crates/test-artifacts/programs/trap-load-store/: Cargo.toml
crates/test-artifacts/src/: lib.rs
crates/verifier/: Cargo.toml
crates/zkvm/entrypoint/: Cargo.toml
crates/zkvm/entrypoint/src/: lib.rs
crates/zkvm/entrypoint/src/syscalls/: mod.rs
crates/zkvm/lib/src/: lib.rs
examples/: Cargo.toml
examples/bls12381/program/: Cargo.toml
examples/bls12381/script/src/: main.rs
examples/fibonacci/program/: Cargo.toml
examples/fibonacci/script/src/: main.rs
examples/many-traps/program/src/: main.rs
examples/many-traps/script/: Cargo.toml
examples/many-traps/script/src/: main.rs
examples/rsp/script/src/: main.rs
examples/sigreturn/program/src/: main.rs
examples/sigreturn/script/: Cargo.toml
examples/sigreturn/script/src/: main.rs
examples/ssz-withdrawals/program/: Cargo.toml
examples/tendermint/program/: Cargo.toml
examples/tendermint/script/src/: main.rs
examples/trap/program/src/: main.rs
examples/trap/script/: Cargo.toml
examples/trap/script/src/: main.rs
examples/u256x2048-mul/program/: Cargo.toml
examples/uint256/program/: Cargo.toml
examples/untrusted_program/program/src/: main.rs
slop/: README.md
sp1-gpu/crates/air/src/: air_block.rs
sp1-gpu/crates/jagged_tracegen/src/: lib.rs
sp1-gpu/crates/shard_prover/src/: prover.rs
(+88 files in other folders)
