[package]
name = "sp1-sdk"
description = "The SP1 SDK for building and proving zkVM programs"
readme = "../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
serde = { workspace = true, features = ["derive"] }
async-trait = { workspace = true }
anyhow = { workspace = true }
sp1-prover = { workspace = true }
sp1-verifier = { workspace = true }
sp1-core-machine = { workspace = true }
sp1-cuda = { workspace = true }
sp1-build = { workspace = true }
futures = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true, features = [
  "fs",
  "io-util",
  "process",
  "rt",
  "sync",
  "time",
  "rt-multi-thread",
] }
slop-algebra = { workspace = true }
slop-alloc = { workspace = true }
slop-basefold = { workspace = true }
slop-commit = { workspace = true }
slop-jagged = { workspace = true }
slop-merkle-tree = { workspace = true }
slop-multilinear = { workspace = true }
slop-stacked = { workspace = true }
slop-sumcheck = { workspace = true }
slop-tensor = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
dirs = { workspace = true }
tempfile = { workspace = true }
cfg-if = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
sp1-core-executor = { workspace = true }
sp1-recursion-executor = { workspace = true }
sp1-hypercube = { workspace = true }
sp1-primitives = { workspace = true }
sp1-prover-types = { workspace = true }
sp1-recursion-gnark-ffi = { workspace = true }
itertools = { workspace = true }
num-bigint = { workspace = true }
sha2 = { workspace = true }
sp1-sdk-types = { workspace = true }
sp1-network = { workspace = true, optional = true }

[dev-dependencies]
test-artifacts = { path = "../test-artifacts" }
tokio = { workspace = true, features = ["macros", "rt"] }
tokio-test = { workspace = true }
rstest = { workspace = true }

[features]
default = []
native-gnark = ["sp1-prover/native-gnark"]
network = ["dep:sp1-network"]
tee-2fa = ["sp1-network/tee-2fa"]
reserved-capacity = ["network", "sp1-network/reserved-capacity"]
cuda = []
bigint-rug = ["sp1-core-machine/bigint-rug"]
experimental = ["sp1-prover/experimental"]
profiling = ["sp1-core-executor/profiling", "sp1-prover/profiling"]
blocking = []
groth16-cuda = ["sp1-recursion-gnark-ffi/groth16-cuda", "native-gnark"]
slow-tests = []
[lints]
workspace = true
