[package]
name = "trap-exec-program"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
sp1-zkvm = {  path = "../../../../crates/zkvm/entrypoint", features = ["untrusted_programs"] }
sp1-derive = { path = "../../../../crates/derive" }
sp1-primitives = { path = "../../../../crates/primitives" }
rand = "0.8.5"
